// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookmarkSummary with Markdown content 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-ifAKCX ghHebx"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Bookmark descriptions can be provided as <strong>Markdown</strong>, and the component should <em>properly</em> format them.</p>
        <p>This includes paragraph breaks</p>
        <ul>
        <li>Lists</li>
        <li>of</li>
        <li>Items</li>
        </ul>
        <p>and</p>
        <ol>
        <li>Numbered</li>
        <li>Lists</li>
        </ol>
        <p>and <a href=\\"/\\">Links</a></p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary with image 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-ifAKCX ghHebx"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk with an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary with just a title 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary without image 1`] = `
<a
  className="sc-bdVaJa jnTnQX"
  href="https://facebook.github.io/react"
>
  <div
    className="sc-bwzfXH kulSxP"
  >
    <h2
      className="sc-htpNat eyraDA"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-bxivhb dNmQiw"
    >
      An Example Website
    </span>
    <div
      className="sc-EHOje cZVPQR"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk without an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots Button with the block style 1`] = `
<button
  className="sc-dnqmqq bowFde"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Button with the default style 1`] = `
<button
  className="sc-dnqmqq cXiVsV"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Button with the primary style 1`] = `
<button
  className="sc-dnqmqq cIJJLo"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Form with the default appearance 1`] = `
<form
  className="sc-gqjmRU kSMixh"
  onSubmit={[Function]}
>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="one"
    >
      Text Field
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="ome"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="twp"
    >
      Text Field
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="twp"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="three"
    >
      Text Field
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="three"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-VigVT iwqiEU"
  >
    <button
      className="sc-dnqmqq cXiVsV"
    >
      Cancel
    </button>
    <input
      className="sc-gZMcBi lonrRe"
      type="submit"
      value="Submit"
    />
  </div>
</form>
`;

exports[`Storyshots Form with the inline style 1`] = `
<form
  className="sc-gqjmRU kSMixh"
  onSubmit={[Function]}
>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="one"
    >
      Text Field
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="ome"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="twp"
    >
      Text Field With a Long Label
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="twp"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-jTzLTM jCOfqE"
  >
    <label
      className="sc-fjdhpX bGmrAh"
      htmlFor="three"
    >
      Text Field
    </label>
    <input
      className="sc-jzJRlG byNtWd"
      id="three"
      onChange={[Function]}
      placeholder="Placeholder"
      type="text"
    />
  </div>
  <div
    className="sc-VigVT iwqiEU"
  >
    <button
      className="sc-dnqmqq cXiVsV"
    >
      Cancel
    </button>
    <input
      className="sc-gZMcBi lonrRe"
      type="submit"
      value="Submit"
    />
  </div>
</form>
`;

exports[`Storyshots Header with a child component 1`] = `
<div>
  <header
    className="sc-bZQynM dtozto"
  >
    <a
      className="sc-gzVnrw PrDPf"
      href="/"
      onClick={[Function]}
    >
      <span
        className="sc-htoDjs jgDVio"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       Shoebox
    </a>
    <button
      className="sc-dnqmqq cXiVsV"
      to="/add"
    >
      Add Bookmark
    </button>
  </header>
</div>
`;

exports[`Storyshots Header with default content 1`] = `
<div>
  <header
    className="sc-bZQynM dtozto"
  >
    <a
      className="sc-gzVnrw PrDPf"
      href="/"
      onClick={[Function]}
    >
      <span
        className="sc-htoDjs jgDVio"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       Shoebox
    </a>
  </header>
</div>
`;

exports[`Storyshots LinkButton with the block style 1`] = `
<div>
  <a
    block={true}
    className="sc-iwsKbI ePeFzy"
    href="#"
    onClick={[Function]}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the default style 1`] = `
<div>
  <a
    className="sc-iwsKbI loSlie"
    href="#"
    onClick={[Function]}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the primary style 1`] = `
<div>
  <a
    className="sc-iwsKbI cZqdBm"
    href="#"
    onClick={[Function]}
    primary={true}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots TextField with placeholder 1`] = `
<input
  className="sc-jzJRlG byNtWd"
  onChange={[Function]}
  placeholder="A placeholder"
  type="text"
/>
`;

exports[`Storyshots TextField with the block style 1`] = `
<input
  className="sc-jzJRlG bLCtQE"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Storyshots TextField with the default style 1`] = `
<input
  className="sc-jzJRlG byNtWd"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Storyshots TextField with value 1`] = `
<input
  className="sc-jzJRlG byNtWd"
  onChange={[Function]}
  type="text"
  value="A value"
/>
`;
